--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -2401,20 +2401,20 @@ kg
                         "comments_love_max": "記念すべき日にOOちゃまといられること…幸せですわ｡ﾊﾟｰﾃｨｰは始まったばかり…わたくしと､楽しみましょう♪"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/30e4b63ba6d39e47189c61588ea40595.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/930ff26d80fa5382750535ab59be82ef.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/c04f215e8dbc27bfec6261a371611ae4.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/279f13c0ec465b452f78da7cee79f0f1.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/d3a37fcd83c3d6b221f6f6f63232144e.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/c8ffa677160f5e2c48680adc28a0c7de.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/92b5065491313c0f404d089f83c1c9e8.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/fd339a40e499d263c52787ea6f7a5964.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/6ea325c684fb8b0c7e8880085a3236af.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/4c9ed5b2d2046f90f3b6241cca17cb1c.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/9e9f4323a22a53d8507c6bbf6e314f89.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/0f8236f3697a2630c686a07d9cbeb0eb.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/c735b04396596c47217bd1b860a1a15d.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1429701\/9626b3fdb828d242d3344582eda0de64.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/my_3.mp4",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/my_4.mp4",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2485,20 +2485,20 @@ kg
                         "comments_love_max": "ﾊﾟｰﾃｨｰは終わるもの…｡でも､わたくしたちの関係は､ずっと続きますの｡OOちゃま､次のﾊﾟｰﾃｨｰをまた迎えましょう"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/a4c02fac6911ac726ae5bee0942e2902.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/0ab89dd1cb372feb73bab48dc6f4e0ff.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/3dc74c3257fd641726b602e509f9676a.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/9f3c11d8cb7b50e87f3afe7351701985.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/f708540e2c150af6952c76d9c90b8035.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/d167961cdadbb6984a37c359ff9f7d85.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/de1e29fd1ec0377c67302a6a8b5a0011.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/6a90d5099f6c7be280b2df39a15df512.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/a28a33a3b88c242efdbc2e644d3f00e5.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/c4460984edbac62c0112f9f43b82fd18.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/265dce62b52b729136f21889d4ddb79d.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/55b016ed3843cf9538a3855d6383e541.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/940a8b504ab1324d71bb31d508d48b7b.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1529702\/c7d5bd616a8fd549da94f1cf23c06938.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/my_3.mp4",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/my_4.mp4",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2569,20 +2569,20 @@ kg
                         "comments_love_max": "うふふっ､お疲れ様､OOちゃま｡ﾌﾟｰﾙ､綺麗になりましたわね｡これも､わたくしたちふたりで掴んだ輝き…ｽﾃｷですわ"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/599fdc5ef4ceb9f1a21255c75fe88dcd.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/cb31503258f25cf38b73df730f7864b6.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/acd9633b42039ab5514901b49fa347cc.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/d8f08dda31877bb21419efd02a54b64d.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/33428e0349c2c277a8acbea928a15730.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/0833c1786eea51badb2709912dae0d52.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/c7a3918cb3da70e7cdc0c599d1146bca.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/dc7725581ad54042be7e03e8d487858b.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/acd80383b07388f315c21732141a200d.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/990c93d4e0ddcd3d45c7a6bd62f117e0.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/2050da8977f0f8d399f6c6d52af3d40e.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/01038077e3a95cc6acbb6b3f151a713a.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/7939f05085588b2c8ceb2d9c38d646c1.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1433801\/c6306faa351442c7cd8d2e325eeb966f.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/my_3.mp4",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/my_4.mp4",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2648,20 +2648,20 @@ kg
                         "comments_love_max": "撮影は終わりましたのね? では､約束通りﾋﾞｰﾁﾎﾞｰﾙで遊びましょう｡ｶﾒﾗ越しでない､ありのままのわたくしをご覧になって♪"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/286c05522a4c84cbfbd01ce8336133e2.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/8ee104a39aa12070fcaaf347887918db.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/73ab6ab1c79d40d5c18f44b47912a5d0.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/b51446cf92c2e637f108cd00502c7c4f.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/4785db6ed63d8cd05cb9db152ef16a3f.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/086678b0aa7535f16b60619d7676f4a7.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/0e49b7c61a521d671999031e1df6361b.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/dbbbdd29659bfb5b3d0360b197d14c11.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/40611d847cbb52a6b68580263275857f.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/d22947e5b859ce3dfbea82625f91fa2c.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/979e42807f4c39f2fd47070437f5aff1.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/d8919e3a219e269747f5c6f137b1531c.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/e383efa07f58139581eb6003650b89e2.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/1533802\/5a4c4fc0bfce259a3f0a4c1b3001e72a.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/my_3.mp4",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/my_4.mp4",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
